change: package_dracut_installed: add

--- a/shared/applicability/package.yml
+++ b/shared/applicability/package.yml
@@ -12,6 +12,8 @@ args:
     {{% endif %}}
   chrony:
     pkgname: chrony
+  dracut:
+    pkgname: dracut
   gdm:
     {{% if pkg_system == "rpm" %}}
     pkgname: gdm
