--- a/shared/templates/extra_ovals.yml
+++ b/shared/templates/extra_ovals.yml
@@ -7,6 +7,11 @@ package_avahi_installed:
     pkgname@ubuntu2004: avahi-daemon
     pkgname@ubuntu2204: avahi-daemon
 
+package_dracut_installed:
+  name: package_installed
+  vars:
+    pkgname: dracut
+
 package_esc_installed:
   name: package_installed
   vars:
