change: .editorconfig: shell style

--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,12 @@ indent_size = unset
 tab_width = 4
 max_line_length = 99
 
+[**.sh]
+indent_style = space
+indent_size = unset
+tab_width = 4
+max_line_length = 99
+
 [{**.yml, **.yaml, **.jinja}]
 indent_style = space
 indent_size = 4
