--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outbound_n_established/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outbound_n_established/rule.yml
@@ -1,5 +1,7 @@
 documentation_complete: true
 
+prodtype: sle12,sle15
+
 title: 'Ensure Outbound and Established Connections are Configured'
 
 description: |-
